# rm_vision_project

./: .gitignore  0531.txt  0601night.txt  26视觉电控联调 README.md  README.md  build.bash  camera_build.bash  config.txt  develop_logger.md  develop_logger.txt  my_log.txt  my_log_04_28_new.txt  my_log_05_06_new.txt  my_log_1.txt  my_log_3.txt
Camera/log/: error_20260325-204428.28649  error_20260326-123524.43418  error_20260326-125533.47221  error_20260326-214224.99319  error_20260326-223332.104547  error_20260327-211639.148129  error_20260329-105359.7471  error_20260329-111146.9362  error_20260329-113935.11844  error_20260329-114721.12871  error_20260329-124655.19907  error_20260329-124717.20235  error_20260329-125241.22066  error_20260329-134605.29060  error_20260329-142502.30719  error_20260329-152512.40785  error_20260329-152517.40848  error_20260329-152537.41095  error_20260329-152551.41222  error_20260329-152630.41557  error_20260329-153104.42625  error_20260329-162508.4075  error_20260329-170557.12291  error_20260402-120610.48097  error_20260402-160719.57020  error_20260404-192856.89453  error_20260404-194512.93140  warning_20260325-204424.28649  warning_20260326-123524.43418  warning_20260326-125533.47221  warning_20260326-214224.99319  warning_20260326-223328.104547  warning_20260327-211634.148129  warning_20260329-105358.7471  warning_20260329-111142.9362  warning_20260329-113935.11844  warning_20260329-114716.12871  warning_20260329-124650.19907  warning_20260329-124712.20235  warning_20260329-125237.22066  (+8 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bringup/share/ament_index/resource_index/package_run_dependencies/: bringup
install/bringup/share/ament_index/resource_index/parent_prefix_path/: bringup
install/bringup/share/bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bringup/share/bringup/cmake/: bringupConfig-version.cmake  bringupConfig.cmake
install/bringup/share/bringup/environment/: ament_prefix_path.dsv  path.dsv
install/bringup/share/bringup/launch/: total_launch.py
install/img_processing/include/: prepare_algorithm.h
install/img_processing/include/utils/: armorplate.h  strip.h
install/img_processing/lib/img_processing/: pre_processing_node
install/img_processing/share/ament_index/resource_index/package_run_dependencies/: img_processing
install/img_processing/share/ament_index/resource_index/parent_prefix_path/: img_processing
install/img_processing/share/img_processing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/img_processing/share/img_processing/cmake/: img_processingConfig-version.cmake  img_processingConfig.cmake
install/img_processing/share/img_processing/environment/: ament_prefix_path.dsv  path.dsv
install/my_mindvision_camera/lib/my_mindvision_camera/: mv_camera_node
install/my_mindvision_camera/share/ament_index/resource_index/parent_prefix_path/: my_mindvision_camera
install/my_mindvision_camera/share/my_mindvision_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_mindvision_camera/share/my_mindvision_camera/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  my_mindvision_cameraConfig-version.cmake  my_mindvision_cameraConfig.cmake
install/my_mindvision_camera/share/my_mindvision_camera/config/: camera_info.yaml  camera_params.yaml
install/my_mindvision_camera/share/my_mindvision_camera/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/my_mindvision_camera/share/my_mindvision_camera/launch/: mv_launch.py
install/test/lib/test/: test.cpp
install/test/share/test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/test/share/test/cmake/: testConfig-version.cmake  testConfig.cmake
install/test/share/test/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
my_logger/: 0531.txt  0601night.txt  0602.txt  0603.txt  0604(最后几秒z开始晃动).txt  0604.txt  0605.txt  0606.txt  0609.txt  my_log_04_29_new.txt
src/bringup/: CMakeLists.txt
src/bringup/launch/: new_launch.py  offline_video_launch.py  total_launch_galaxy.py  total_launch_mind_vision.py
src/galaxy_camera/config/: camera_info.yaml
src/galaxy_camera/src/: galaxy_camera_node.cpp
src/img_processing/: CMakeLists.txt  package.xml
src/img_processing/include/: armorplate.h  core_node.hpp  ekf.hpp  kf_data.hpp  plotter.hpp  prepare_algorithm.h  rm_constants.hpp  rm_utils.hpp  runge_kutta.hpp  strip.h  tf.hpp  yolo_armor.hpp  yolo_detector.hpp
src/img_processing/include/tools/: math_tools.hpp
src/img_processing/include/utils/: armorplate.h  strip.h
src/img_processing/model/: 0526.xml
src/img_processing/scripts/: yolo_infer_node.py  yolo_node.py
src/img_processing/src/: armorplate.cpp  core_node.cpp  ekf.cpp  kf_data.cpp  kf_position.cpp  plotter.cpp  pre_processing_node.cpp  prepare_algorithm.cpp  runge_kutta.cpp  strip.cpp  tf.cpp  tf_node.cpp  yolo_armor.cpp  yolo_detector.cpp
src/img_processing/src/utils/: armorplate.cpp  strip.cpp
src/my_mindvision_camera/: CMakeLists.txt
src/my_mindvision_camera/src/: mv_camera_node.cpp
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/config/: serial_driver.yaml
src/rm_serial_driver/include/rm_serial_driver/: ekf.hpp  kf_position.hpp  packet.hpp  rm_serial_driver.hpp  tf.hpp
src/rm_serial_driver/src/: ekf.cpp  kf_data.cpp  kf_position.cpp  rm_serial_driver.cpp  tf.cpp
src/serial_driver_interfaces/: CMakeLists.txt  package.xml
src/serial_driver_interfaces/msg/: ReceiveData.msg  SendPNPInfo.msg  SerialDriver.msg
src/test/: CMakeLists.txt
src/test/src/: test.cpp.cpp
src/unit_tests/: CMakeLists.txt  README.md
src/unit_tests/src/: test_crc.cpp  test_packet.cpp  test_strip.cpp
(+4 files in other folders)
